# asterion-desktop

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  rank.txt  tailwind.config.ts
gcs/: setup.sh
scraper-service/: Cargo.toml  README.md
scraper-service/deploy/: README.md  asterion-scraper.service  asterion-scraper.timer  asterion.env.example  bootstrap.sh  create-vm.sh
scraper-service/src/: comments.rs  extract.rs  gcs.rs  http.rs  lib.rs  main.rs  pipeline.rs  supabase.rs  types.rs  webnoveldb.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AddNovelDialog.tsx  BackButton.tsx  GeneratedCover.tsx  Layout.tsx  NovelCard.tsx  PageHeader.tsx
src/components/viewers/: DocxViewer.tsx  EpubViewer.tsx  PdfViewer.tsx  (+1 more)
src/hooks/: useBack.ts  usePreferences.ts
src/lib/: admin.ts  api.ts  docs.ts  download.ts  format.ts  openDocument.ts  queries.ts  queryClient.ts  reader.ts  supabase.ts  types.ts
src/pages/: DocumentViewer.tsx  Documents.tsx  Home.tsx  Library.tsx  NovelDetail.tsx  Profile.tsx  Ranking.tsx  Reader.tsx
src/providers/: ThemeProvider.tsx
src/types/: mammoth-browser.d.ts
supabase/: README.md  combined-schema.sql  config.toml
supabase/migrations/: 0001_content.sql  0002_user_data.sql  0003_rls.sql  0004_scrape_requests.sql  0005_rankings.sql  0006_comments.sql  0007_scrape_progress.sql  0008_hide_progress.sql
supabase/seed/: novelfire-catalog.json  seed-catalog.mjs
