[package]
name = "asterion-scraper-service"
version = "0.1.0"
edition = "2021"
description = "Centralized novelfire scraper for the Asterion desktop reader. Runs on a GCP VM; writes chapter content to Google Cloud Storage and metadata/index to Supabase."

[[bin]]
name = "catalog-runner"
path = "src/main.rs"

[lib]
name = "asterion_scraper"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "cookies",
    "json",
] }
scraper = "0.20"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
url = "2"
urlencoding = "2"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
